Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2590,7 +2590,7 @@ input, select, textarea {
 			margin: 0 0 1em 0;
 			display: block;
 			width: 100%;
-			height: 45%;
+			height: 40%;
 			overflow: hidden;
 		}
 
@@ -3795,8 +3795,8 @@ input, select, textarea {
 
 #back-to-top {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
     display: none; /* Hidden by default */
     background-color: transparent; /* Make button background transparent */
     border: none; /* Remove border */
